--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "rewrites": [{ "source": "/(.*)", "destination": "/api" }],
   "functions": {
-    "api/routes/*.js": {
+    "api/**/*": {
       "maxDuration": 20
     }
   },
