--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "memory-cache": "^0.2.0",
+    "nodemailer": "^6.10.0",
     "papaparse": "^5.4.1",
     "xml2js": "^0.6.2"
   }
